# espExamples

./: CMakeLists.txt  docker-compose.yml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/hardware_driver/: CMakeLists.txt  esp_board_init.c
components/hardware_driver/boards/esp32s3-box-3/: bsp_board.c
components/hardware_driver/boards/include/: esp32_s3_box_3_board.h
components/hardware_driver/include/: esp_board_init.h
main/: AppMqtt.hpp  AppWifi.hpp  CMakeLists.txt  HttpClient.hpp  Kconfig.projbuild  audio.cpp  eventHandlers.hpp  idf_component.yml  server.py
main/agent/: AppAgent.hpp
main/agent/aws/: BedrockClient.hpp
main/agent/ml/: AppWake.hpp
main/agent/voice/: AppRecorder.hpp
main/http/: AppOTA.hpp  HttpClient.hpp  HttpServer.hpp
main/http/rainmaker/ota/: AppDriver.hpp  AppNode.hpp
main/http/server/: cert.pem  key.pem  server.py
main/http/server/static/: info.txt
main/sensor/: SensorApp.hpp  bme280-new-i2c.hpp  esp32-i2c-new-driver-bme280.cpp
main/ui/: ui.c  ui.h  ui_events.c  ui_events.h
main/ui/screens/: ui_Screen1.c
